2010-02-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/CMakeLists.txt: avoid obscure conflict between
	generated header files and installed header files, when
	install directory is identical to YARP_DIR.

2010-02-01  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: responses to "yarp name"
	should not go through logger (which may truncate them).
	Thanks Ugo for reporting this.

2010-01-27  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/src/RemoteControlBoard.cpp:
    timeout handling bug fix

2010-01-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: added "yarp quiet" option,
	e.g. "yarp quiet read /read".  This is the opposite of the
	existing "yarp verbose" option.  The effect is the same as
	setting the YARP_QUIET environment variable.

	* src/libYARP_OS/src/Network.cpp: added "YARP_QUIET" environment
	variable.  If set to 1, no messages should be emitted by YARP.
	Note to developers - please use YARP_ERROR/YARP_DEBUG/YARP_INFO
	macros for all messages so that users can control their
	appearance.

2010-01-27 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Companion.cpp
	* src/libYARP_OS/src/Run.cpp
	Set "verbatim" option in yarp write and yarp readwrite.

2010-01-25  Serena Ivaldi  <serena.ivaldi@iit.it>

	* src/libYARP_sig/include/yarp/sig/Matrix.h src/libYARP_sig/src/Matrix.cpp:
    added setRow/setCol methods
    
2010-01-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindAce.cmake: explicitly link pthread along with ACE,
	to keep GoLD happy for users of that linker (thanks Radu
	Bogdan Rusu)

2010-01-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: freeze version 2.2.6

2010-01-10 Lorenzo Natale <nat@liralab.it>
	* libYARP_dev: added new IOpenLoopControlRaw/IOpenLoopControl interfaces and implementation class.
    
2010-01-10 Lorenzo Natale <nat@liralab.it>
	* libYARP_dev: added new IAnalogSensor/AnalogSensorClient.