@@ -37,6 +37,7 @@ public:
 
     virtual const Route& getRoute() = 0;
     virtual bool isActive() = 0;
+    virtual bool isOk() = 0;
     virtual bool isTextMode() = 0;
     virtual bool isConnectionless() = 0;
     virtual bool canEscape() = 0;
